--- a/css/graph_month.css
+++ b/css/graph_month.css
@@ -31,5 +31,38 @@
 }
 
 .main{
-    margin:10% 30% 0% 30%;
+    max-height: 500px;
+}
+
+#graph{
+    margin: 0% 30%;
+}
+
+#back_graph_month{
+    font-size: 30px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 3px solid #B2B2B2;
+    background-color: rgb(255, 255, 255);
+}
+
+#next_graph_month{
+    font-size: 30px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 3px solid #B2B2B2;
+    background-color: rgb(255, 255, 255);
+}
+
+#MonthCount{
+    padding: 0 70px;
+    font-size: 20px;
+}
+
+#next_back_button{
+    display: flex;
+    padding-bottom: 50px;
+    padding-left: 100px;
 }
