--- a/css/month.css
+++ b/css/month.css
@@ -30,100 +30,7 @@
     background-color: #EF90B5;
 }
 
-
-#back{
-    font-size: 30px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 3px solid #B2B2B2;
-    background-color: rgb(255, 255, 255);
-    position: absolute;
-}
-
-#next{
-    font-size: 30px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 3px solid #B2B2B2;
-    background-color: rgb(255, 255, 255);
-    margin-left: 900px;
-    position: absolute;
-}
-
-#next_back_button{
-    display: flex;
-    z-index: 1;
-    margin: 0 100px;
-}
-
-#calendar{
-    display: flex;
-    z-index: 2;
-    position: absolute;
-    left: 350px;
-}
-
-.main{
-    text-align: center;
-}
-
-h1{
-    font-size: 40px;
-}
-
-table {
-    outline: 2px solid #ddd;
-    border-collapse: collapse;
-    width: 100%;
-    margin-top: 30px;
-}
-
-th {
-    color: #000;
-}
-
-th, td {
-    outline: 1px solid #ddd;
-    height: 70px;
-    width: 110px;
-    text-align: left;
-    padding: 0 30px 40px 5px;
-}
-
-tr{
-    max-height: 70px;
-}
-
-.lt{
-    background-color: #EF90B5;
-    text-align: center;
-    border-top-right-radius: 50px 50px;
-    border-bottom-right-radius: 50px 50px;
-    padding: 0px 4px;
-    font-size: 12px;
-    position: absolute;
-}
-
-.lt a{
-    text-decoration-line: none;
-    color:inherit;
-    font-size: 10px
-}
-
-
-.add{
-    position: absolute;
-    top: 600px;
-    left: 1200px;
-    font-size: 30px;
-    text-align: center;
-    background-color: #ffffff;
-    box-shadow: 0 0 0 3px #B2B2B2 inset;
-    padding: 20px 20px;
-}
-
-h2{
-    font-size: 30px;
+td {
+    width: 50px;
+    height: 50px;
 }
